--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="logo-img" src="./assets/img/amazing_brand.png" alt="Logo"></a>
@@ -89,7 +90,7 @@
 
     </header>
 
-    <main class="">
+    <main>
         <div class="container-fluid text-center"> <!-- container-fluid para que ocupe todo el espacio -->
             <div class="row align-items-center">
                 <div class="row p-3 col-md-8 container-fluid" style="width: 65%;">
@@ -128,149 +129,8 @@
         </div>
 
         <div class="product">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col col-sm-6">
-                    <div class="card h-100">
-                        <img src="./assets/img/books.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="text-body-secondary text-end container-fluid"
-                                style="padding-left: 0px;padding-right: 0px;">
-                                <div class="card-body row align-items-center">
-                                    <div class="col-md-8">
-                                        <h5 class="card-title">Price</h5>
-                                    </div>
-                                    <div class="col-md-4 d-block">
-                                        <a href="./detailsbook.html" class="btn btn-primary border-dark">Details</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-sm-6">
-                    <div class="card h-100">
-                        <img src="./assets/img/costume_party.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a short card.</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="text-body-secondary text-end container-fluid"
-                                style="padding-left: 0px;padding-right: 0px;">
-                                <div class="card-body row align-items-center">
-                                    <div class="col-md-8">
-                                        <h5 class="card-title">Price</h5>
-                                    </div>
-                                    <div class="col-md-4 d-block">
-                                        <a href="./detailsparty.html" class="btn btn-primary border-dark">Details</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-sm-6">
-                    <div class="card h-100">
-                        <img src="./assets/img/cinema.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content.</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="text-body-secondary text-end container-fluid"
-                                style="padding-left: 0px;padding-right: 0px;">
-                                <div class="card-body row align-items-center">
-                                    <div class="col-md-8">
-                                        <h5 class="card-title">Price</h5>
-                                    </div>
-                                    <div class="col-md-4 d-block">
-                                        <a href="./detailscinema.html" class="btn btn-primary border-dark">Details</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-sm-6">
-                    <div class="card h-100">
-                        <img src="./assets/img/outing_to_the_museum.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="text-body-secondary text-end container-fluid"
-                                style="padding-left: 0px;padding-right: 0px;">
-                                <div class="card-body row align-items-center">
-                                    <div class="col-md-8">
-                                        <h5 class="card-title">Price</h5>
-                                    </div>
-                                    <div class="col-md-4 d-block">
-                                        <a href="./detailsmuseum.html" class="btn btn-primary border-dark">Details</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-sm-6">
-                    <div class="card h-100">
-                        <img src="./assets/img/marathon.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="text-body-secondary text-end container-fluid"
-                                style="padding-left: 0px;padding-right: 0px;">
-                                <div class="card-body row align-items-center">
-                                    <div class="col-md-8">
-                                        <h5 class="card-title">Price</h5>
-                                    </div>
-                                    <div class="col-md-4 d-block">
-                                        <a href="./detailsmarathon.html" class="btn btn-primary border-dark">Details</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-sm-6">
-                    <div class=" card h-100">
-                        <img src="./assets/img/music_concert.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="text-body-secondary text-end container-fluid"
-                                style="padding-left: 0px;padding-right: 0px;">
-                                <div class="card-body row align-items-center">
-                                    <div class="col-md-8">
-                                        <h5 class="card-title">Price</h5>
-                                    </div>
-                                    <div class="col-md-4 d-block">
-                                        <a href="./detailsconcert.html" class="btn btn-primary border-dark">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <h2>Events</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4" id="contenedoreventos">
             </div>
         </div>
     </main>
@@ -309,6 +169,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+        <script src="./assets/js/data.js"></script>
+        <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
