--- a/pastevents.html
+++ b/pastevents.html
@@ -116,149 +116,7 @@
         </div>
 
         <div class="product">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col col-sm-6">
-                    <div class="card h-100">
-                        <img src="./assets/img/books.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="text-body-secondary text-end container-fluid"
-                                style="padding-left: 0px;padding-right: 0px;">
-                                <div class="card-body row align-items-center">
-                                    <div class="col-md-8">
-                                        <h5 class="card-title">Price</h5>
-                                    </div>
-                                    <div class="col-md-4 d-block">
-                                        <a href="./detailsbook.html" class="btn btn-primary border-dark">Details</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-sm-6">
-                    <div class="card h-100">
-                        <img src="./assets/img/costume_party.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a short card.</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="text-body-secondary text-end container-fluid"
-                                style="padding-left: 0px;padding-right: 0px;">
-                                <div class="card-body row align-items-center">
-                                    <div class="col-md-8">
-                                        <h5 class="card-title">Price</h5>
-                                    </div>
-                                    <div class="col-md-4 d-block">
-                                        <a href="./detailsparty.html" class="btn btn-primary border-dark">Details</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-sm-6">
-                    <div class="card h-100">
-                        <img src="./assets/img/cinema.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content.</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="text-body-secondary text-end container-fluid"
-                                style="padding-left: 0px;padding-right: 0px;">
-                                <div class="card-body row align-items-center">
-                                    <div class="col-md-8">
-                                        <h5 class="card-title">Price</h5>
-                                    </div>
-                                    <div class="col-md-4 d-block">
-                                        <a href="./detailscinema.html" class="btn btn-primary border-dark">Details</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-sm-6">
-                    <div class="card h-100">
-                        <img src="./assets/img/outing_to_the_museum.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="text-body-secondary text-end container-fluid"
-                                style="padding-left: 0px;padding-right: 0px;">
-                                <div class="card-body row align-items-center">
-                                    <div class="col-md-8">
-                                        <h5 class="card-title">Price</h5>
-                                    </div>
-                                    <div class="col-md-4 d-block">
-                                        <a href="./detailsmuseum.html" class="btn btn-primary border-dark">Details</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-sm-6">
-                    <div class="card h-100">
-                        <img src="./assets/img/marathon.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="text-body-secondary text-end container-fluid"
-                                style="padding-left: 0px;padding-right: 0px;">
-                                <div class="card-body row align-items-center">
-                                    <div class="col-md-8">
-                                        <h5 class="card-title">Price</h5>
-                                    </div>
-                                    <div class="col-md-4 d-block">
-                                        <a href="./detailsmarathon.html" class="btn btn-primary border-dark">Details</a>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-sm-6">
-                    <div class=" card h-100">
-                        <img src="./assets/img/music_concert.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class="text-body-secondary text-end container-fluid"
-                                style="padding-left: 0px;padding-right: 0px;">
-                                <div class="card-body row align-items-center">
-                                    <div class="col-md-8">
-                                        <h5 class="card-title">Price</h5>
-                                    </div>
-                                    <div class="col-md-4 d-block">
-                                        <a href="./detailsconcert.html" class="btn btn-primary border-dark">Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4" id="contenedoreventos">
             </div>
         </div>
     </main>
@@ -297,6 +155,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+        <script src="./assets/js/pasts.js"></script>
 </body>
 
 </html>
