--- a/details.html
+++ b/details.html
@@ -11,7 +11,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"> <!-- para la lupa de busqueda -->
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <title>Details costume party</title>
+    <title>Details</title>
 </head>
 
 <body>
@@ -45,27 +45,8 @@
     </nav>
 
     <main class="details">
-        <div class="card mb-3" style="max-width: 800px;">
-            <div class="row g-0">
-              <div class="col-md-4 ">
-                <img src="./assets/img/costume_party.jpg" class="img-fluid rounded-start" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title text-center">Card title</h5>
-                  <ul class="card-text list-group">
-                    <li class="list-group-item">ID</li>
-                    <li class="list-group-item">Name</li>
-                    <li class="list-group-item">Descripcion</li>
-                    <li class="list-group-item">Category</li>
-                    <li class="list-group-item">Place</li>
-                    <li class="list-group-item">Capacity</li>
-                    <li class="list-group-item">Assistance or estimate</li>
-                    <li class="list-group-item">Price</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
+        <div id="contenedordetails" class="card mb-3" style="max-width: 800px;">
+            
           </div>
     </main>
     
@@ -100,6 +81,8 @@
         </div>
     </footer>
 
+    <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/details.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
