--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    
+
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="logo-img" src="./assets/img/amazing_brand.png" alt="Logo"></a>
@@ -91,48 +91,34 @@
     </header>
 
     <main>
+
         <div class="container-fluid text-center"> <!-- container-fluid para que ocupe todo el espacio -->
             <div class="row align-items-center">
-                <div class="row p-3 col-md-8 container-fluid" style="width: 65%;">
-                    <div class="col col-sm-6 col-lg-4">
-                        <input type="checkbox" id="category1" name="categories">
-                        <label class="checkcat" for="category1">Category</label>
-                    </div>
-                    <div class="col col-sm-6 col-lg-4">
-                        <input type="checkbox" id="category2" name="categories">
-                        <label class="checkcat" for="category2">Category</label>
-                    </div>
-                    <div class="col col-sm-6 col-lg-4">
-                        <input type="checkbox" id="category3" name="categories">
-                        <label class="checkcat" for="category3">Category</label>
-                    </div>
-                    <div class="col col-sm-6 col-lg-4">
-                        <input type="checkbox" id="category4" name="categories">
-                        <label class="checkcat" for="category4">Category</label>
-                    </div>
-                    <div class="col col-sm-6 col-lg-4">
-                        <input type="checkbox" id="category5" name="categories">
-                        <label class="checkcat" for="category5">Category</label>
-                    </div>
-                    <div class="col col-sm-6 col-lg-4">
-                        <input type="checkbox" id="category6" name="categories">
-                        <label class="checkcat" for="category6">Category</label>
-                    </div>
+                <div id="contcheck" class="row p-3 col-md-8 container-fluid" style="width: 65%;"></div>
+
+                <div id="contbusqueda" class="col-12-md-4 d-flex search" style="width: 25%;">
+
+                    <input id="tbuscar" class="form-control me-2" type="search" placeholder="Buscar"
+                        aria-label="Search">
+                    <button id="buscar" class="btn btn-outline-success">OK</button>
                 </div>
-                <form class="col-12-md-4 d-block search" role="search" style="width: 35%;">
+                <!-- <form class="col-12-md-4 d-block search" role="search" style="width: 35%;" id="tbuscar">
                     <input class="lupa" type="text" placeholder="Search">
-                    <div class="btn">
+                    <div class="btn" id="buscar">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
-                </form>
+                </form> -->
             </div>
+
+
+        </div>
         </div>
 
         <div class="product">
-            <h2>Events</h2>
             <div class="row row-cols-1 row-cols-md-3 g-4" id="contenedoreventos">
             </div>
         </div>
+
     </main>
 
     <footer class="bg-dark text-white text-center py-3 container-fluid">
@@ -166,11 +152,14 @@
         </div>
     </footer>
 
+    <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
-        <script src="./assets/js/data.js"></script>
-        <script src="./assets/js/main.js"></script>
+
+
+
 </body>
 
 </html>
