--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
     </footer>
 
     <script src="./assets/js/data.js"></script>
+    <script src="./assets/js/functions.js"></script>
     <script src="./assets/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
