--- a/stats.html
+++ b/stats.html
@@ -105,11 +105,11 @@
                             <th scope="col">Events with larger capacity</th>
                         </tr>
                     </thead>
-                    <tbody class="table-group-divider">
+                    <tbody class="table-group-divider" id="eventsTable">
                         <tr>
-                            <th scope="row" id="highestAssistanceCell"></th>
-                            <td id="lowestAssistanceCell"></td>
-                            <td id="largestCapacityCell"></td>
+                            <th scope="row"></th>
+                            <td></td>
+                            <td></td>
                         </tr>
 
                 </table>
@@ -124,7 +124,7 @@
                             <th scope="col">Percentage of assistance</th>
                         </tr>
                     </thead>
-                    <tbody id="upcomingEventsTableBody" class="table-group-divider">
+                    <tbody id="upcomingEventsTable" class="table-group-divider">
                         <tr>
                             <th scope="row"></th>
                             <td></td>
@@ -149,7 +149,7 @@
                             <th scope="col">Percentage of assistance</th>
                         </tr>
                     </thead>
-                    <tbody id="pastEventsTableBody" class="table-group-divider">
+                    <tbody id="pastEventsTable" class="table-group-divider">
                         <tr>
                             <th></th>
                             <td></td>
